# oop-class

./: README.md  pyproject.toml
src/mini_library/: book.py  leading.py  main.py  user.py
tests/: test_instanciacao.py  test_regras.py
