[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    "Alan Mendes Vieira <alan.mendes@aluno.ufca.edu.br>"
]
readme = "README.md"
packages = [{include = "mini_library", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
react = ">=4.3.0,<5.0.0"
fastapi = ">=0.128.0,<0.129.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pytest = ">=9.0.2,<10.0.0"

[tool.poetry.scripts]
mini-library = "mini_library.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"